# p1-tabular-methods-zano0

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebook/: exercise.ipynb  tabular_explanations.ipynb
src/: shapley_explainer.py
tests/: test_shap.py
