[project]
name = "laboratory-01-tabular-explanation-methods"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipynb>=0.5.1",
    "lime==0.2.0.1",
    "matplotlib==3.7.1",
    "numpy==1.25.2",
    "pandas==2.0.3",
    "pytest>=8.4.2",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "shap==0.45.1",
    "xgboost==1.7.5",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
